--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -43,6 +43,9 @@ ul {
   width: 960px;
   margin: 0px auto;
 }
+.block {
+  display: block !important;
+}
 p {
   margin-top: 0px;
 }
